--- a/Fitness.CMD/Languages/Messeges.ua-ua.resx
+++ b/Fitness.CMD/Languages/Messeges.ua-ua.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="EnterName" xml:space="preserve">
-    <value>Введите имя.</value>
+    <value>Введіть ім'я</value>
   </data>
   <data name="Hello" xml:space="preserve">
-    <value>Привет.</value>
+    <value>Привіт</value>
   </data>
 </root>
